Fix IOTA sources being cropped out of viewport
DONM-244 #time 20m

--- a/_source/stylesheets/pages/_regions-and-subprefectures.scss
+++ b/_source/stylesheets/pages/_regions-and-subprefectures.scss
@@ -100,6 +100,18 @@
 	border-bottom: inherit;
 
 	transform: translateX(-50%);
+
+	@include media('<max-width') {
+		right: 0;
+		left: auto;
+
+		transform: none;
+
+		&::after {
+			right: 0;
+			left: auto;
+		}
+	}
 }
 
 .districts-comparison__source:focus > b,
